互換レイヤ上で正男が動作